--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- Adicione aqui os links do menu, se necessário -->
-      </div>
-      <!-- Barra de Pesquisa -->
+      <div class="collapse navbar-collapse" id="navbarNav"></div>
       <div class="ml-auto my-2 my-lg-0 search-bar">
         <input
           class="form-control mr-sm-2 search-input"
@@ -61,22 +58,16 @@
     </nav>
 
     <div class="container mt-5">
-      <!-- Mensagem de Pokémon não encontrado -->
       <div id="notFoundMessage" class="text-center mt-3" style="display: none">
         <h4>Pokémon não encontrado</h4>
       </div>
-      <!-- Lista de Pokémons -->
-      <div class="row" id="pokemon-list">
-        <!-- A lista de Pokémons será exibida aqui -->
-      </div>
-      <!-- Botão "Ver Mais" -->
+      <div class="row" id="pokemon-list"></div>
       <button
         id="loadMoreButton"
         class="btn btn-primary btn-sm mt-3 mx-auto d-block"
       >
         Ver Mais
       </button>
-      <!-- Detalhes do Pokémon -->
       <div
         class="modal fade"
         id="pokemonDetailsModal"
@@ -100,9 +91,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body" id="pokemon-details">
-              <!-- Os detalhes do Pokémon serão exibidos aqui -->
-            </div>
+            <div class="modal-body" id="pokemon-details"></div>
           </div>
         </div>
       </div>
@@ -114,165 +103,7 @@
     >
       <img src="./imagens/giphyy.gif" alt="Pokémon" />
     </button>
-    <!-- Bootstrap JS e dependências -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const pokemonList = document.getElementById("pokemon-list");
-        let offset = 0;
-        const limit = 20;
-
-        // Função para carregar os Pokémon
-        async function loadPokemon() {
-          // Fetch para obter a lista de Pokémon com base no offset e limit
-          const response = await fetch(
-            `https://pokeapi.co/api/v2/pokemon?offset=${offset}&limit=${limit}`
-          );
-          const data = await response.json();
-          const pokemonData = data.results;
-
-          // Ordena os Pokémon numericamente
-          pokemonData.sort((a, b) => {
-            const numberA = parseInt(a.url.split("/")[6]);
-            const numberB = parseInt(b.url.split("/")[6]);
-            return numberA - numberB;
-          });
-
-          for (const pokemon of pokemonData) {
-            const card = document.createElement("div");
-            card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
-
-            const pokemonNumber = pokemon.url.split("/")[6]; // Obtém o número do Pokémon a partir da URL
-            const formattedNumber = String(pokemonNumber).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
-            const pokemonType = await fetch(pokemon.url)
-              .then((response) => response.json())
-              .then((pokemon) => pokemon.types[0].type.name);
-
-            card.innerHTML = `
-              <div class="card ${pokemonType}">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${pokemonNumber}.png" class="card-img-top" alt="${pokemon.name}">
-                <div class="card-body">
-                  <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
-                  <a href="pokemon-details.html?url=${pokemon.url}" class="btn btn-primary openPokedexButton" data-url="${pokemon.url}">Abrir Pokedex</a>
-                </div>
-              </div>
-            `;
-
-            pokemonList.appendChild(card);
-          }
-
-          // Incrementa o offset para a próxima carga
-          offset += limit;
-        }
-
-        // Inicializa a carga dos primeiros Pokémon
-        loadPokemon();
-
-        // Adiciona um evento de clique ao botão "Ver Mais"
-        document
-          .getElementById("loadMoreButton")
-          .addEventListener("click", loadPokemon);
-
-        // Adiciona um ouvinte de evento ao scroll para verificar a posição e exibir/ocultar o botão "Voltar ao Topo"
-        window.addEventListener("scroll", function () {
-          toggleScrollTopButton();
-        });
-      });
-
-      // Função para verificar a posição de rolagem e exibir/ocultar o botão "Voltar ao Topo"
-      function toggleScrollTopButton() {
-        const scrollTopButton = document.getElementById("scrollTopButton");
-        const scrollPosition = window.scrollY;
-
-        // Exibe o botão quando o scroll for superior a 300 pixels
-        if (scrollPosition > 300) {
-          scrollTopButton.style.display = "block";
-        } else {
-          scrollTopButton.style.display = "none";
-        }
-      }
-
-      // Função para rolar suavemente de volta ao topo
-      function scrollToTop() {
-        window.scrollTo({
-          top: 0,
-          behavior: "smooth",
-        });
-      }
-
-      // Função para pesquisar Pokémon pelo nome ou número
-      function searchPokemon() {
-        const searchInput = document
-          .getElementById("searchInput")
-          .value.toLowerCase();
-        const notFoundMessage = document.getElementById("notFoundMessage");
-        const pokemonList = document.getElementById("pokemon-list");
-
-        // Oculta a mensagem de "Pokémon não encontrado"
-        notFoundMessage.style.display = "none";
-
-        // Remove todos os cards existentes na lista
-        pokemonList.innerHTML = "";
-
-        // Fetch para obter o Pokémon pelo nome ou número
-        fetch(`https://pokeapi.co/api/v2/pokemon/${searchInput}`)
-          .then((response) => {
-            if (!response.ok) {
-              // Se não encontrar o Pokémon, exibe a mensagem
-              notFoundMessage.style.display = "block";
-              throw new Error("Pokémon não encontrado");
-            }
-            return response.json();
-          })
-          .then((pokemon) => {
-            // Cria o card do Pokémon pesquisado com o botão "Abrir Pokédex"
-            const card = createPokemonCard(pokemon, true);
-
-            // Adiciona o card no topo da lista
-            pokemonList.insertBefore(card, pokemonList.firstChild);
-          })
-          .catch((error) => {
-            console.error("Erro ao pesquisar Pokémon:", error);
-          });
-      }
-
-      // Função para criar um card de Pokémon
-      function createPokemonCard(pokemon, includeButton) {
-        const card = document.createElement("div");
-        card.className = "col-md-3 mb-4 card-background"; // Adiciona a classe card-background
-
-        const formattedNumber = String(pokemon.id).padStart(3, "0"); // Formata para ter três dígitos (preenchendo com zeros à esquerda, se necessário)
-        const pokemonType = pokemon.types[0].type.name;
-
-        card.innerHTML = `
-          <div class="card ${pokemonType}">
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${
-              pokemon.id
-            }.png" class="card-img-top" alt="${pokemon.name}">
-            <div class="card-body">
-              <h5 class="card-title">#${formattedNumber} - ${pokemon.name}</h5>
-              ${
-                includeButton
-                  ? `<button class="btn btn-primary openPokedexButton" data-url="https://pokeapi.co/api/v2/pokemon/${pokemon.id}/">Abrir Pokédex</button>`
-                  : ""
-              }
-            </div>
-          </div>
-        `;
-
-        // Adiciona um ouvinte de evento ao botão "Abrir Pokédex"
-        if (includeButton) {
-          const openPokedexButton = card.querySelector(".openPokedexButton");
-          openPokedexButton.addEventListener("click", function () {
-            // Redireciona para a página de detalhes com a URL do Pokémon
-            window.location.href = `pokemon-details.html?url=${encodeURIComponent(
-              openPokedexButton.dataset.url
-            )}`;
-          });
-        }
-
-        return card;
-      }
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
